--- a/telemetry/aggregator/src/main/resources/application.properties
+++ b/telemetry/aggregator/src/main/resources/application.properties
@@ -2,5 +2,8 @@ smart-home-tech.kafka.bootstrap-servers=localhost:9092
 smart-home-tech.kafka.hub-event-topic=telemetry.hubs.v1
 smart-home-tech.kafka.sensor-event-topic=telemetry.sensors.v1
 smart-home-tech.kafka.sensor-snapshot-topic=telemetry.snapshots.v1
+smart-home-tech.kafka.group-id=aggregator-consumer-group
+smart-home-tech.kafka.auto-offset-reset=latest
+smart-home-tech.kafka.enable-auto-commit=false
 logging.level.ru.yandex.practicum.service.SnapshotServiceImpl=DEBUG
 management.endpoints.web.exposure.include=health,metrics
