--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -9,3 +9,13 @@ spring:
         native:
           searchLocations:
             - classpath:config/telemetry/{application}
+
+eureka:
+  client:
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: ${spring.application.name}${random.int}
+    preferIpAddress: false
+    hostname: localhost
