--- a/telemetry/aggregator/src/main/resources/application.yaml
+++ b/telemetry/aggregator/src/main/resources/application.yaml
@@ -2,7 +2,12 @@ spring:
   application:
     name: aggregator
   config:
-    import: configserver:http://localhost:8888
+    import: "configserver:"
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        serviceId: config-server
 
 cloud:
   config:
@@ -10,3 +15,12 @@ cloud:
     retry:
       useRandomPolicy: true
       max-interval: 6000
+
+eureka:
+  client:
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
+  instance:
+    preferIpAddress: false
+    hostname: localhost
