Разработать Commerce: Cart, Warehouse, Store

--- a/infra/config-server/src/main/resources/config/telemetry/aggregator/application.yaml
+++ b/infra/config-server/src/main/resources/config/telemetry/aggregator/application.yaml
@@ -10,11 +10,7 @@ smart-home-tech:
 
 logging:
   level:
-    ru:
-      yandex:
-        practicum:
-          service:
-            SnapshotServiceImpl: DEBUG
+    ru.yandex.practicum.service.SnapshotServiceImpl: DEBUG
 
 management:
   endpoints:
