--- a/infra/config-server/src/main/resources/config/commerce/shopping-store/application.yaml
+++ b/infra/config-server/src/main/resources/config/commerce/shopping-store/application.yaml
@@ -16,7 +16,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: false
     properties:
       hibernate:
