--- a/commerce/warehouse/src/main/resources/application.yaml
+++ b/commerce/warehouse/src/main/resources/application.yaml
@@ -8,19 +8,18 @@ spring:
       discovery:
         enabled: true
         serviceId: config-server
-
-cloud:
-  config:
-    fail-fast: true
-    retry:
-      useRandomPolicy: true
-      max-interval: 6000
+      fail-fast: true
+      retry:
+        useRandomPolicy: true
+        max-interval: 60000
+        max-attempts: 100
 
 eureka:
   client:
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
+    instance-id: ${spring.application.name}${random.int}
     preferIpAddress: false
     hostname: localhost
