--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>commerce</module>
         <module>infra/config-server</module>
         <module>infra/discovery-server</module>
+        <module>infra/gateway</module>
     </modules>
 
     <properties>
